增加发送队列和服务器列表
增加双向列表实现，封装网络模块初始化，运行等

--- a/netevent_cwrapper.vcproj
+++ b/netevent_cwrapper.vcproj
@@ -167,6 +167,14 @@
 	</References>
 	<Files>
 		<File
+			RelativePath=".\list.h"
+			>
+		</File>
+		<File
+			RelativePath=".\net_ctype.h"
+			>
+		</File>
+		<File
 			RelativePath=".\net_extern.h"
 			>
 		</File>
@@ -184,6 +192,14 @@
 		</File>
 		<File
 			RelativePath=".\net_interface.h"
+			>
+		</File>
+		<File
+			RelativePath=".\net_loop.c"
+			>
+		</File>
+		<File
+			RelativePath=".\net_loop.h"
 			>
 		</File>
 		<File
