实现锁功能
对发送队列，连接队列进行锁保护

--- a/netevent_cwrapper.vcproj
+++ b/netevent_cwrapper.vcproj
@@ -171,6 +171,14 @@
 			>
 		</File>
 		<File
+			RelativePath=".\lock.c"
+			>
+		</File>
+		<File
+			RelativePath=".\lock.h"
+			>
+		</File>
+		<File
 			RelativePath=".\net_ctype.h"
 			>
 		</File>
