回调事件改为消息驱动
回调事件改为消息驱动，增加读队列，增加加解密功能

--- a/netevent_cwrapper.vcproj
+++ b/netevent_cwrapper.vcproj
@@ -171,6 +171,14 @@
 			>
 		</File>
 		<File
+			RelativePath=".\event_format.c"
+			>
+		</File>
+		<File
+			RelativePath=".\event_format.h"
+			>
+		</File>
+		<File
 			RelativePath=".\list.h"
 			>
 		</File>
@@ -212,6 +220,10 @@
 		</File>
 		<File
 			RelativePath=".\net_loop.h"
+			>
+		</File>
+		<File
+			RelativePath=".\system_event.h"
 			>
 		</File>
 		<File
